--- a/style/style.css
+++ b/style/style.css
@@ -512,15 +512,16 @@ address{
 .portfolio-list{
     display: flex;
     flex-wrap: wrap;
-    margin-left: 30px;
-    margin-top: 30px;
-}
-
-
-.portfolio-list > .port-thumb{
+    
     flex-basis: calc(100% / 3 - 30px);
     margin-left: -30px;
     margin-top: -30px;
+}
+
+
+.portfolio-list > .portfolio-list-li{
+    margin-left: 30px;
+    margin-top: 30px;
 }
 
 .port-list-text{
