--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,6 @@ address{
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
-    width: 1170px;
 }
 
 
@@ -99,7 +98,7 @@ address{
 }
 
 .header-navigation{
-    margin-right: auto;
+    
 }
 
 .header-nav-li{
@@ -132,7 +131,8 @@ address{
   font-size: 14px;
   line-height: 1.1428;
   letter-spacing: 0.02em; 
-  gap: 50px; 
+  gap: 50px;
+  margin-left: auto; 
 }
 
 .header-nav-contact:focus,
@@ -339,8 +339,8 @@ address{
 /*-----------------footer-------------*/
 
 .foot-con{
-    margin: 0 215px;
-    padding: 60px 0;
+    padding: 60px 0 60px 15px;
+
 }
 
 .footer{
