--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,15 @@ address{
     list-style: none;
 }
 
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section-work{
+   padding-bottom: 74px;
+}
+
 
 /* --------------index.html--------------------*/
 .body {
@@ -66,6 +75,7 @@ address{
     align-items: center;
     padding-left: 15px;
     padding-right: 15px;
+    width: 1170px;
 }
 
 
@@ -146,7 +156,7 @@ address{
     background-color: var(--hero-footer-color);
     margin-left: auto;
     margin-right: auto;
-    padding: 200px;
+    padding: 200px 0px;
 }
 
 .hero-h1{
@@ -183,18 +193,13 @@ address{
 /*---------------LIST-----------*/
 
 
-
-
-
-.list-con{
+.list-con-div{
     display: flex;
     align-items: center;
     gap: 30px;
     margin-right: auto;
     margin-left: auto;
-    padding: 94px 0;
 }
-
 
 .list {
    text-decoration: none;
@@ -224,11 +229,9 @@ address{
 /*----------Work--------*/
 
 .work{
-    display: block;
     align-items: center;
     margin-right: auto;
     margin-left:auto;
-    height: 460px;
     justify-content: center;
 }
 
@@ -265,11 +268,11 @@ address{
     padding-right:auto ;
     padding-left:  auto;
     margin-top: 50px;
-    padding-bottom: 94px;
 }
 
 
 .team-con{
+    border-radius: 10px;
     width: 270px;
     height: 368px;
     background-color: var(--basic-title-color);
@@ -294,7 +297,6 @@ address{
     line-height: 1.1666;
     text-align: center;
     letter-spacing: 0.03em;
-    padding-top: 94px;
     
 }
 
@@ -304,9 +306,6 @@ address{
     justify-content: center;
 }
 
-/*.team-list-li {
-   
-}*/
 
 .taem-list-title {
     font-weight: 500;
@@ -314,7 +313,7 @@ address{
     line-height: 19px;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 
@@ -336,7 +335,7 @@ address{
 
 .foot-con{
     padding: 60px 0 60px 15px;
-
+    width: 1170px;
 }
 
 .footer{
